--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-1.35MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 未知国家-4.19MB/s(Youtube:不良林), server: 103.184.97.4, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.184.97.4}}
-  - {name: 🇯🇵 日本-1.17MB/s(Youtube:不良林), server: 185.172.113.102, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-2.61MB/s(Youtube:不良林), server: 172.99.188.71, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇺🇸 美国-3.43MB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.74MB/s(Youtube:不良林), server: 38.68.134.191, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇨🇦 加拿大-1.92MB/s(Youtube:不良林), server: 72.140.224.195, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇩🇪 德国-2.61MB/s(Youtube:不良林), server: 193.108.117.75, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-3.67MB/s(Youtube:不良林), server: 167.88.61.14, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇳 中国-3.82MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-3.06MB/s(Youtube:不良林), server: 134.195.196.149, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇦 加拿大-3.02MB/s(Youtube:不良林), server: 134.195.196.149, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇨🇦 加拿大-3.04MB/s(Youtube:不良林), server: 134.195.196.149, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇨🇦 加拿大-3.07MB/s(Youtube:不良林), server: 134.195.196.149, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇨🇦 加拿大-3.22MB/s(Youtube:不良林), server: 134.195.196.149, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-4.49MB/s(Youtube:不良林), server: 64.112.43.180, port: 13674, type: vmess, uuid: f44ce146-2d6d-4e84-dcac-3bdd8689d053, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
-      - 未知国家-4.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.06MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
-      - 未知国家-4.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.06MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
-      - 未知国家-4.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.06MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
-      - 未知国家-4.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.06MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
-      - 未知国家-4.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.06MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
-      - 未知国家-4.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.06MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
-      - 未知国家-4.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.06MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.49MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
