--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,13 +5,13 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.02MB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇫🇷 法国-301.7KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-3.11MB/s(Youtube:不良林), server: 38.68.134.191, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇨🇳 中国-305.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.53MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-2.57MB/s(Youtube:不良林), server: 134.195.196.149, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇺🇸 美国-1.57MB/s(Youtube:不良林), server: 172.99.188.71, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-2.36MB/s(Youtube:不良林), server: 38.68.134.191, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇺🇸 美国-3.04MB/s(Youtube:不良林), server: test.johnnyz.tk, port: 21997, type: vmess, uuid: d27f450c-e9e4-4427-90bf-42020401c1ad, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /johnnyz996, ws-headers: {Host: test.johnnyz.tk}}
   - {name: 🇨🇦 加拿大-2.35MB/s(Youtube:不良林), server: 134.195.196.149, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-3.02MB/s(Youtube:不良林), server: 134.195.196.149, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇦 加拿大-2.38MB/s(Youtube:不良林), server: 134.195.196.149, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇨🇦 加拿大-3.04MB/s(Youtube:不良林), server: 134.195.196.149, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇨🇦 加拿大-3.07MB/s(Youtube:不良林), server: 134.195.196.149, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇨🇦 加拿大-3.22MB/s(Youtube:不良林), server: 134.195.196.149, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
@@ -21,13 +21,13 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
-      - 🇫🇷 法国-301.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.35MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.22MB/s(Youtube:不良林)
@@ -36,13 +36,13 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
-      - 🇫🇷 法国-301.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.35MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.22MB/s(Youtube:不良林)
@@ -52,13 +52,13 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
-      - 🇫🇷 法国-301.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.35MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.22MB/s(Youtube:不良林)
@@ -72,13 +72,13 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
-      - 🇫🇷 法国-301.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.35MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.22MB/s(Youtube:不良林)
@@ -87,13 +87,13 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
-      - 🇫🇷 法国-301.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.35MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.22MB/s(Youtube:不良林)
@@ -103,13 +103,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
-      - 🇫🇷 法国-301.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.35MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.22MB/s(Youtube:不良林)
@@ -128,13 +128,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
-      - 🇫🇷 法国-301.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-305.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.35MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.38MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.07MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.22MB/s(Youtube:不良林)
